--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.4.0"
+log = "0.4.20"
 rust-stemmers = "1.2.0"
+serde = {vesion="1.0.188", features = ["derive"]}
+serde_json = "1.0.107"
